# PJC_projekt_1

./: Board.cpp  Board.h  CMakeLists.txt  GameLogic.cpp  GameLogic.h  Hexagon.cpp  Hexagon.h  Menu.cpp  Menu.h  Player.cpp  Player.h  main.cpp
files/: scores.txt
